--- a/indexprueba.html
+++ b/indexprueba.html
@@ -12,7 +12,7 @@
             <div id="inner-text">
                 <h1>Hola Mundo</h1>
                 <h2>Bienvenido a mi página web</h2>
-                <img src id="https://images.pexels.com/photos/3947374/pexels-photo-3947374.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <img src="https://images.pexels.com/photos/3947374/pexels-photo-3947374.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
         </div>
         </div id="landing page">
 
